laborations/lab2/testsuite/good/ass_in_block.cc
int main() {
        int x = 5;
        { x = 7; }
        printInt(x);
        return 0;
}
