laborations/lab2/testsuite/bad/dec_pre_incorrect_type.cc
int main () {
  bool x;
  --x;
  return 0;
}
